refactor: Phase 13 — dead code removal, test consolidation, build cleanup
- Delete 14 dead source files (~3,100 lines): LinkedList, Lock, ServiceManager,
  SupportFunctions, OdbcDateTime, Engine.h, WriteBuildNo.h, IscDbc.def/.exp,
  OdbcJdbcMinGw.def, OdbcJdbc.dll.manifest, makefile.in (×2)
- Remove phantom CMake refs to already-deleted test_catalog.cpp, test_batch_params.cpp
- Redistribute test_phase7_crusher_fixes.cpp (22 tests) into topic files:
  CopyDescCrashTest → test_descriptor.cpp, DiagRowCountTest → test_errors.cpp,
  ConnectionTimeoutTest/AsyncEnableTest → test_connect_options.cpp,
  TruncationIndicatorTest → test_errors.cpp
- Redistribute test_phase11_typeinfo_timeout_pool.cpp (21 tests) into topic files:
  TypeInfoTest → test_catalogfunctions.cpp, AsyncModeTest/QueryTimeoutTest/
  ConnectionResetTest → test_connect_options.cpp
- Remove duplicate tests: test_connection.cpp (5), test_cursor.cpp (10),
  test_bind_cycle.cpp (4), test_data_types.cpp IntegerToString/GetDataStringTruncation
- All 401 unique tests pass (31 duplicates removed from original 432)
- Update FIREBIRD_ODBC_MASTER_PLAN.md: Phase 13 marked complete with Status columns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,6 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 # Options
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 option(BUILD_TESTING "Build tests" ON)
-option(BUILD_SETUP "Build setup/configuration library" OFF)
 option(ODBC_PERF_COUNTERS "Enable performance counter instrumentation" OFF)
 
 if(ODBC_PERF_COUNTERS)
@@ -144,7 +143,9 @@ set(ODBCJDBC_HEADERS
     src/SetupAttributes.h
     src/TemplateConvert.h
     src/Utf16Convert.h
-    src/WriteBuildNo.h
+    src/OdbcString.h
+    src/OdbcSqlState.h
+    src/OdbcUserEvents.h
     src/resource.h
 )
 
@@ -173,13 +174,7 @@ if(WIN32)
     # ODBC entry points and should not import them from the Driver Manager
     
     # Set the .def file for exports
-    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-        # 64-bit
-        set_target_properties(OdbcFb PROPERTIES LINK_FLAGS "/DEF:${CMAKE_CURRENT_SOURCE_DIR}/src/OdbcJdbc.def")
-    else()
-        # 32-bit
-        set_target_properties(OdbcFb PROPERTIES LINK_FLAGS "/DEF:${CMAKE_CURRENT_SOURCE_DIR}/src/OdbcJdbc.def")
-    endif()
+    set_target_properties(OdbcFb PROPERTIES LINK_FLAGS "/DEF:${CMAKE_CURRENT_SOURCE_DIR}/src/OdbcJdbc.def")
 else()
     target_link_libraries(OdbcFb PRIVATE 
         ${ODBC_LIBRARIES}
@@ -187,11 +182,6 @@ else()
         dl
         pthread
     )
-endif()
-
-# Setup library (optional)
-if(BUILD_SETUP AND WIN32)
-    add_subdirectory(OdbcJdbcSetup)
 endif()
 
 # Testing
